--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Dario <dario@infinitefieldtrading.com>"]
 description = "Yet another websocket library. But a fast, secure WebSocket implementation with RFC 6455 compliance and compression support"
-# documentation = "https://docs.rs/yawc"
+documentation = "https://docs.rs/yawc"
 repository = "https://github.com/infinitefield/yawc"
 license = "LGPL-3.0-or-later"
 keywords = ["websocket", "websockets", "ws", "networking", "async"]
