--- a/yawcc/Cargo.toml
+++ b/yawcc/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [workspace]
 
 [dependencies]
-yawc = { path = "../" }
+yawc = "0.1"
 rustyline = "14.0.0"
 clap = { version = "4.5.20", features = ["derive"] }
 anyhow = "1.0.91"
