yawcc: custom headers

--- a/yawcc/Cargo.toml
+++ b/yawcc/Cargo.toml
@@ -16,6 +16,9 @@ categories = [
 readme = "README.md"
 rust-version = "1.75.0"
 
+# [patch.crates-io]
+# yawc = { git = "https://github.com/infinitefield/yawc", branch = "master" }
+
 [workspace]
 
 [dependencies]
