--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,17 +54,21 @@ required-features = ["axum", "reqwest", "json"]
 # ==============================================================================
 [dependencies]
 url = "2"
+bytes = "1"
+futures = "0.3"
+anyhow = "1"
+web-sys = { version = "0.3", default-features = false, features = ["WebSocket", "ErrorEvent", "MessageEvent", "console"] }
 
 # ==============================================================================
 # WebAssembly target-specific dependencies
 # ==============================================================================
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-# WebAssembly interface
 web-sys = { version = "0.3", default-features = false, features = [
     "WebSocket",
 ] }
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
+js-sys = "0.3"
 
 # ==============================================================================
 # Native target-specific dependencies
@@ -103,8 +107,6 @@ sha1 = "0.10"
 rand = "0.8"
 
 # Utilities
-bytes = "1"
-futures = "0.3"
 nom = "7.1"
 pin-project = "1"
 thiserror = "1"
