--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,7 +57,11 @@ url = "2"
 bytes = "1"
 futures = "0.3"
 anyhow = "1"
-web-sys = { version = "0.3", default-features = false, features = ["WebSocket", "ErrorEvent", "MessageEvent", "console"] }
+web-sys = { version = "0.3", default-features = false, features = [
+    "WebSocket",
+    "ErrorEvent",
+    "MessageEvent",
+] }
 
 # ==============================================================================
 # WebAssembly target-specific dependencies
