--- a/yawcc/Cargo.toml
+++ b/yawcc/Cargo.toml
@@ -46,3 +46,4 @@ serde_json = "1.0.132"
 hyper-util = { version = "0.1.10", features = ["http1", "server"] }
 hyper = { version = "1.6.0", features = ["http1", "server"] }
 http-body-util = "0.1.2"
+chrono = "0.4.41"
