--- a/.github/workflows/release-yawcc.yml
+++ b/.github/workflows/release-yawcc.yml
@@ -22,6 +22,7 @@ jobs:
     outputs:
       release_id: ${{ steps.create_release.outputs.id }}
       upload_url: ${{ steps.create_release.outputs.upload_url }}
+      tag: ${{ steps.extract_version.outputs.tag }}
     steps:
       - uses: actions/checkout@v4
 
@@ -121,7 +122,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref_name }}
+          tag_name: ${{ needs.create-release.outputs.tag }}
           files: ./${{ matrix.name }}.tar.gz
 
       - name: Upload Release Asset (Windows)
@@ -130,5 +131,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref_name }}
+          tag_name: ${{ needs.create-release.outputs.tag }}
           files: ./${{ matrix.name }}.zip
