--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -11,11 +11,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Install latest nightly
-        uses: actions-rs/toolchain@v1
+      - uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.82.0
-          override: true
+          toolchain: stable
           components: rustfmt
       - uses: denoland/setup-deno@v1
         with:
