--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Build
         run: cargo build --verbose --all-features --all-targets
       - name: Test
-        run: cargo test --verbose --all-features
+        run: cargo test --verbose
       - name: Check formatting
         run: cargo fmt -- --check --verbose
       - name: Autobahn|Testsuite client
