--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ zlib = ["flate2/any_zlib", "flate2/zlib-rs"]
 logging = ["log"]
 simd = ["simdutf8"]
 reqwest = ["dep:reqwest"]
-axum = ["axum-core", "async-trait", "http"]
+axum = ["axum-core", "http"]
 json = ["serde_json", "serde"]
 
 # Examples configuration
@@ -87,7 +87,6 @@ http-body-util = "0.1"
 
 # HTTP servers (optional)
 axum-core = { version = "0.5", optional = true }
-async-trait = { version = "0.1", optional = true }
 http = { version = "1.2", optional = true }
 
 # Async runtime and utilities
