--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Dario <dario@infinitefieldtrading.com>"]
 description = "Yet another websocket library. But a fast, secure WebSocket implementation with RFC 6455 compliance and compression support"
 documentation = "https://docs.rs/yawc"
 repository = "https://github.com/infinitefield/yawc"
-license = "LGPL-3.0-or-later"
+license = "MPL-2.0"
 keywords = ["websocket", "websockets", "ws", "networking", "wasm"]
 categories = [
     "network-programming",
