--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,13 +29,15 @@ rustdoc-args = ["--cfg", "docsrs"]
 
 # Optional feature configurations
 [features]
-default = []
+default = ["rustls-ring"] # Enabled the ring crypto provider by default to not have any breaking changes
 zlib = ["flate2/any_zlib", "flate2/zlib-rs"]
 logging = ["log"]
 simd = ["simdutf8"]
 reqwest = ["dep:reqwest"]
 axum = ["axum-core", "http"]
 json = ["serde_json", "serde"]
+rustls-ring = ["tokio-rustls/ring"]
+rustls-aws-lc-rs = ["tokio-rustls/aws-lc-rs"]
 
 # Examples configuration
 [[example]]
@@ -55,7 +57,7 @@ required-features = ["axum", "reqwest", "json"]
 url = "2"
 bytes = "1"
 futures = "0.3"
-thiserror = "1"
+thiserror = "2"
 
 # ==============================================================================
 # WebAssembly target-specific dependencies
@@ -77,17 +79,16 @@ js-sys = "0.3"
 hyper = { version = "1", features = ["client", "http1"] }
 hyper-util = { version = "0.1", features = ["tokio"] }
 tokio-rustls = { version = "0.26", default-features = false, features = [
-    "ring",
     "logging",
     "tls12",
 ] }
 reqwest = { version = "0.12", default-features = false, optional = true }
-webpki-roots = "0.26"
+webpki-roots = "1"
 http-body-util = "0.1"
 
 # HTTP servers (optional)
 axum-core = { version = "0.5", optional = true }
-http = { version = "1.2", optional = true }
+http = { version = "1", optional = true }
 
 # Async runtime and utilities
 tokio = { version = "1", default-features = false, features = [
@@ -125,14 +126,14 @@ flate2 = "1"
 anyhow = "1"
 axum = "0.8"
 hyper = { version = "1.6", features = ["http1", "server", "client"] }
-log = "0.4.22"
+log = "0.4"
 reqwest = { version = "0.12", default-features = false, features = [
-    "rustls-tls",
-    "rustls-tls-webpki-roots",
+    "rustls-tls-no-provider",
+    "rustls-tls-webpki-roots-no-provider",
 ] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-simple_logger = "5.0.0"
-tokio = { version = "1.41.0", features = ["full"] }
-tokio-stream = { version = "0.1.16", features = ["sync"] }
-webpki-roots = "0.26"
+simple_logger = "5"
+tokio = { version = "1", features = ["full"] }
+tokio-stream = { version = "0.1", features = ["sync"] }
+webpki-roots = "1"
