--- a/yawcc/Cargo.toml
+++ b/yawcc/Cargo.toml
@@ -22,7 +22,7 @@ rust-version = "1.75.0"
 [workspace]
 
 [dependencies]
-yawc = "0.2"
+yawc = { version = "0.2", path = "..", default-features = false, features = ["rustls-aws-lc-rs"] }
 rustyline = "14.0.0"
 clap = { version = "4.5.20", features = ["derive"] }
 anyhow = "1.0.91"
@@ -36,7 +36,7 @@ tokio = { version = "1.43.1", features = [
 url = "2.5.3"
 futures = { version = "0.3.31", default-features = false, features = ["std"] }
 tokio-rustls = { version = "0.26.0", default-features = false, features = [
-    "ring",
+    "aws-lc-rs",
     "logging",
     "tls12",
 ] }
