--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,6 @@ zlib = ["flate2/any_zlib", "flate2/zlib-rs"]
 simd = ["simdutf8"]
 reqwest = ["dep:reqwest"]
 axum = ["axum-core", "http"]
-json = ["serde_json", "serde"]
 rustls-ring = ["tokio-rustls/ring"]
 rustls-aws-lc-rs = ["tokio-rustls/aws-lc-rs"]
 
@@ -49,7 +48,7 @@ test = false
 [[example]]
 name = "axum_proxy"
 path = "examples/axum_proxy/main.rs"
-required-features = ["axum", "reqwest", "json"]
+required-features = ["axum", "reqwest"]
 test = false
 
 [[example]]
@@ -149,6 +148,7 @@ flate2 = "1"
 # Development dependencies
 # ==============================================================================
 [dev-dependencies]
+serde_json = "1"
 wasm-bindgen-test = "0.3"
 
 # ==============================================================================
@@ -164,7 +164,6 @@ reqwest = { version = "0.12", default-features = false, features = [
     "rustls-tls-webpki-roots-no-provider",
 ] }
 serde = { version = "1", features = ["derive"] }
-serde_json = "1"
 simple_logger = "5"
 tokio = { version = "1", features = ["full"] }
 tokio-stream = { version = "0.1", features = ["sync"] }
