--- a/Cargo.toml
+++ b/Cargo.toml
@@ -109,7 +109,7 @@ tokio-rustls = { version = "0.26", default-features = false, features = [
     "logging",
     "tls12",
 ] }
-reqwest = { version = "0.12", default-features = false, optional = true }
+reqwest = { version = "0.13", default-features = false, optional = true }
 webpki-roots = "1"
 http-body-util = "0.1"
 
@@ -159,10 +159,7 @@ anyhow = "1"
 axum = "0.8"
 hyper = { version = "1.7", features = ["http1", "server", "client"] }
 log = "0.4"
-reqwest = { version = "0.12", default-features = false, features = [
-    "rustls-tls-no-provider",
-    "rustls-tls-webpki-roots-no-provider",
-] }
+reqwest = { version = "0.13" }
 serde = { version = "1", features = ["derive"] }
 simple_logger = "5"
 tokio = { version = "1", features = ["full"] }
