--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 /Cargo.lock
 tags*
 .bacon*
+
+# Benchmark dependencies (auto-downloaded)
+/benches/*
+!/benches/run.js
+!/benches/README.md
+!/benches/load_test.c
+!/benches/Makefile
