--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,7 +81,6 @@ bytes = "1"
 futures = "0.3"
 thiserror = "2"
 rand = "0.8"
-tokio = { version = "1", default-features = false }
 
 # ==============================================================================
 # WebAssembly target-specific dependencies
@@ -98,6 +97,8 @@ js-sys = "0.3"
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
 getrandom = { version = "0.2", features = ["js"] }
+# Tokio without net features for WASM
+tokio = { version = "1", default-features = false }
 
 
 # ==============================================================================
@@ -151,9 +152,7 @@ flate2 = "1"
 # ==============================================================================
 [dev-dependencies]
 anyhow = "1"
-console-subscriber = "0.5.0"
 serde_json = "1"
-tokio = { version = "1", features = ["rt", "tracing"] }
 wasm-bindgen-test = "0.3"
 
 # ==============================================================================
@@ -162,12 +161,13 @@ wasm-bindgen-test = "0.3"
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 anyhow = "1"
 axum = "0.8"
+console-subscriber = "0.5.0"
 hyper = { version = "1.7", features = ["http1", "server", "client"] }
 log = "0.4"
 reqwest = { version = "0.13" }
 serde = { version = "1", features = ["derive"] }
 simple_logger = "5"
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["full", "tracing"] }
 tokio-stream = { version = "0.1", features = ["sync"] }
 webpki-roots = "1"
 criterion = { version = "0.5", features = ["async_tokio"] }
