--- a/Cargo.toml
+++ b/Cargo.toml
@@ -167,7 +167,8 @@ log = "0.4"
 reqwest = { version = "0.13" }
 serde = { version = "1", features = ["derive"] }
 simple_logger = "5"
-tokio = { version = "1", features = ["full", "tracing"] }
+# tokio = { version = "1", features = ["full", "tracing"] }
+tokio = { version = "1", features = ["full"] }
 tokio-stream = { version = "0.1", features = ["sync"] }
 webpki-roots = "1"
 criterion = { version = "0.5", features = ["async_tokio"] }
