echo server using smol

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,18 @@ required-features = ["axum", "reqwest"]
 test = false
 
 [[example]]
+name = "client_smol"
+path = "examples/client_smol.rs"
+required-features = ["smol"]
+test = false
+
+[[example]]
+name = "echo_server_smol"
+path = "examples/echo_sever_smol.rs"
+required-features = ["smol"]
+test = false
+
+[[example]]
 name = "autobahn_client"
 test = false
 
@@ -67,6 +79,10 @@ test = false
 
 [[example]]
 name = "echo_server"
+test = false
+
+[[example]]
+name = "echo_server_smol"
 test = false
 
 [[example]]
