options: Fix server merging. native: options: add tests. Handle client max window bits declared but with no value native: support zlib better examples: autobahn_server

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,6 +70,11 @@ name = "autobahn_client"
 test = false
 
 [[example]]
+name = "autobahn_server"
+required-features = ["axum"]
+test = false
+
+[[example]]
 name = "client"
 test = false
 
@@ -79,6 +84,7 @@ test = false
 
 [[example]]
 name = "echo_server"
+required-features = ["axum"]
 test = false
 
 [[example]]
