--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -40,7 +40,15 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           deno run -A --unstable autobahn/client-test.js
+      - name: Autobahn|Testsuite client (with zlib)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          deno run -A --unstable autobahn/client-test.js zlib
       - name: Autobahn|Testsuite server
         if: matrix.os == 'ubuntu-latest'
         run: |
           deno run -A --unstable autobahn/server-test.js
+      - name: Autobahn|Testsuite server (with zlib)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          deno run -A --unstable autobahn/server-test.js zlib
